--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,9 @@
 [project]
 name = "llm-huggingface"
 version = "0.1"
+dependencies = [
+    "llm",
+]
 
 [project.entry-points.llm]
 markov = "llm_huggingface"
